# football-predictor

./: .dockerignore  .env.example  .gitignore  ADVANCED_METHODS_GUIDE.md  AUDIT_REPORT.md  CALIBRATION_AND_DRIFT_UPGRADES.md  CLAUDE.md  DELIVERABLES_MANIFEST.md  Dockerfile  IMPLEMENTATION_SUMMARY.txt  MASTER_PLAN.md  Procfile  README.md  agent.md  bootstrap.sh  docker-compose.yml  mathbasedtheorems.txt  moreapis.txt  pyproject.toml  render.yaml  requirements.txt  test_advanced_implementations.py  test_new_implementations_standalone.py
.github/workflows/: autopilot.yml  ci.yml  data-refresh.yml  deploy.yml  model-retrain.yml  static.yml  test.yml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
docs/: 404.html  app.js  index.html  style.css
docs/api/: accumulators.json  btts-ou.json  competitions.json  last-updated.json  matches.json  model-lab.json  performance.json  post-match-review.json  self-learning.json  sources.json  stats.json  streaks.json  training-status.json  value-bets.json
docs/api/form-table/: A1.json  BEL.json  BL1.json  DED.json  ELC.json  FL1.json  GR1.json  PD.json  PL.json  PPL.json  SA.json  SL.json  TR1.json
docs/api/league-table/: A1.json  BEL.json  BL1.json  DED.json  ELC.json  FL1.json  GR1.json  PD.json  PL.json  PPL.json  SA.json  SL.json  TR1.json
docs/api/matches/: 1000694670366301710.json  1004253569554621135.json  1006518041653648350.json  1019197586226627524.json  103400680259261680.json  1035343794776841873.json  1036251014364416244.json  1037954105126630472.json  1048033242740856825.json  1052556246445779890.json  1076678578630805456.json  1104823655958898019.json  1116533093448128192.json  1126847043353584070.json  1164117569045552924.json  1164750655518250466.json  1180639061957776350.json  1186032807416792337.json  1187535515017879439.json  (+776 more)
ios/: BUILD_SUMMARY.md  DELIVERY_CHECKLIST.md  SETUP_GUIDE.md
ios/FootyPredictor/: README.md
plan/: architecture-forecast-platform-1.md  upgrade-forecast-platform-2.md
src/footy/: backtest.py  cache.py  cli.py  config.py  continuous_training.py  data_orchestrator.py  db.py  degradation_alerts.py  extras.py  fbref.py  fixtures_odds.py  h2h.py  model_config.py  normalize.py  performance_tracker.py  pipeline.py  prediction_aggregator.py  scheduler.py  self_learning.py  team_mapping.py  understat.py  utils.py  walkforward.py  xg.py
tests/: conftest.py  test_advanced_math.py  test_advanced_math_v11.py  test_api.py  test_bayesian_engine.py  test_calibration_and_drift.py  test_circuit_breaker.py  test_cli.py  test_config.py  test_conformal.py  test_continuous_training.py  test_db.py  test_enhanced_prediction.py  test_experimental_math.py  test_expert_gate.py  test_h2h.py  test_llm_rebalancer.py  test_math_modules.py  test_model_config.py  test_models_council.py  test_models_dc.py  test_models_elo.py  test_models_poisson.py  test_new_experts.py  test_normalize.py  test_pages_export.py  test_pages_export_comprehensive.py  test_parameter_learner.py  test_prediction_aggregator.py  test_providers_new.py  test_scheduler.py  test_self_learning.py  test_smoke.py  test_trueskill.py  test_upgrades.py  test_v10_council.py  test_v11_upgrade.py  test_v12_upgrades.py  test_walkforward.py  test_xg.py  (+1 more)
ui/: app.py
web/: __init__.py  api.py
web/routes/: __init__.py  advanced.py  betting.py  health.py  insights.py  matches.py  predictions.py  stats.py  system.py
web/static/: app.js  manifest.json  style.css  sw.js
web/templates/: index.html
(+1800 files in other folders)
